--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^4.6.13",
     "@descope/react-sdk": "^1.0.9",
     "@next/font": "13.4.12",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
@@ -37,10 +38,9 @@
   },
   "devDependencies": {
     "@xata.io/cli": "^0.12.0",
-    
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1",
-    "typescript": "^4.4.2",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "typescript": "^4.4.2"
   }
 }
