--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^0.6.2",
     "superjson": "^1.12.1",
     "typescript": "5.1.6",
     "zod": "^3.20.2"
