--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.6.13",
     "@descope/react-sdk": "^1.0.9",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "13.4.12",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@prisma/client": "^5.0.0",
@@ -25,11 +26,13 @@
     "@types/node": "18.17.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.3",
     "@xata.io/client": "^0.24.3",
     "email-validator": "^2.0.4",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "^0.6.2",
