--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
+    "@tensorflow/tfjs": "^4.9.0",
     "@trpc/client": "^10.5.0",
     "@trpc/next": "^10.5.0",
     "@trpc/react-query": "^10.5.0",
@@ -31,8 +32,11 @@
     "email-validator": "^2.0.4",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "i": "^0.3.7",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
+    "npm": "^9.8.1",
+    "nsfwjs": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "^0.6.2",
