--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@types/node": "18.17.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@uppy/core": "^3.3.1",
+    "@uppy/drag-drop": "^3.0.2",
+    "@uppy/react": "^3.1.3",
+    "@uppy/transloadit": "^3.2.0",
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/analytics": "^1.0.1",
     "@xata.io/client": "^0.24.3",
