--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "i": "^0.3.7",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
+    "next-axiom": "^1.0.0-rc.1",
     "npm": "^9.8.1",
     "nsfwjs": "^2.2.0",
     "react": "18.2.0",
