--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@uppy/core": "^3.3.1",
     "@uppy/drag-drop": "^3.0.2",
     "@uppy/react": "^3.1.3",
+    "@uppy/status-bar": "^3.2.3",
     "@uppy/transloadit": "^3.2.0",
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/analytics": "^1.0.1",
