--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@uppy/core": "^3.3.1",
+    "@uppy/dashboard": "^3.5.0",
     "@uppy/drag-drop": "^3.0.2",
+    "@uppy/file-input": "^3.0.2",
+    "@uppy/progress-bar": "^3.0.2",
     "@uppy/react": "^3.1.3",
     "@uppy/status-bar": "^3.2.3",
     "@uppy/transloadit": "^3.2.0",
