--- a/package.json
+++ b/package.json
@@ -14,10 +14,20 @@
     "@clerk/nextjs": "^4.6.13",
     "@descope/react-sdk": "^1.0.9",
     "@headlessui/react": "^1.7.15",
+    "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "13.4.12",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@tensorflow/tfjs": "^4.9.0",
@@ -39,10 +49,12 @@
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/analytics": "^1.0.1",
     "@xata.io/client": "^0.24.3",
+    "class-variance-authority": "^0.7.0",
     "email-validator": "^2.0.4",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "i": "^0.3.7",
+    "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-axiom": "^1.0.0-rc.1",
