--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-axiom": "^1.0.0-rc.1",
+    "node-html-parser": "^6.1.5",
+    "node-schedule": "^2.1.1",
     "npm": "^9.8.1",
     "nsfwjs": "^2.2.0",
     "react": "18.2.0",
@@ -73,6 +75,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/node-schedule": "^2.1.0",
     "@xata.io/cli": "^0.12.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1",
