--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-compare-slider": "^2.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "react-uploader": "^3.38.0",
     "sonner": "^0.6.2",
