--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "superjson": "^1.12.1",
     "typescript": "5.1.6",
     "uploader": "^3.39.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/node-schedule": "^2.1.0",
