--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-uploader": "^3.38.0",
     "sonner": "^0.6.2",
     "superjson": "^1.12.1",
+    "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6",
     "uploader": "^3.39.0",
     "zod": "^3.20.2",
